--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,66 +1,40 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      <strong>CRUD</strong>
-    </ion-title>
+    <ion-title>DASHBOARD</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-
 <div id="container">
-  <h1><strong>MOVIE LIST</strong></h1>
-  <ion-item>
-    <ion-label position="floating">Title</ion-label>
-    <ion-input type="text" [(ngModel)]="user.Title"></ion-input>
- </ion-item>
+  <h1>MOVIE WATCHLIST CRUD</h1>
+  <div class="content" *ngFor="let user of userList">
+    <div class="content-box">
+      <div class="content-all">
+        <h2>Title: {{user.title}} </h2>
+        <h2>Author: {{user.author}} </h2>
+        <h2>Ratings: {{user.ratings}} </h2>
+        <h2>Released: {{user.released}} </h2>
+        <h2>Completed: {{user.isCompleted}} </h2>
+        <h2>Genres: {{user.genres}} </h2>
+      </div>
+      <div class="btn">
+        <ion-button color="success" (click)="update(user)"><ion-icon name="create-outline"></ion-icon></ion-button>
+        <ion-button color="danger" (click)="delete(user)"><ion-icon name="trash-outline" *ngIf="user.id"></ion-icon></ion-button>
+      </div>
+    </div>
+  </div>
 
- <ion-item>
-    <ion-label position="floating">Duration</ion-label>
-    <ion-input type="text" [(ngModel)]="user.Duration"></ion-input>
- </ion-item>
-
- <ion-item>
-    <ion-label position="floating">Main Actors</ion-label>
-    <ion-input type="text" [(ngModel)]="user.MainActors"></ion-input>
- </ion-item>
-
- 
- <ion-item>
-  <ion-label position="floating">Popularity (Y/N)</ion-label>
-  <ion-input type="text" [(ngModel)]="user.isPopular"></ion-input>
-</ion-item>
+</div>
 
 
-  <ion-item>
-    <ion-label position="floating">Time Saved</ion-label>
-    <ion-input type="text" [(ngModel)]="user.Released"></ion-input>
-  </ion-item>
+<div class="log-out-btn">
+  <ion-fab-button (click)="logOut()">
+    <ion-icon name="log-out" color="dark"></ion-icon>
+  </ion-fab-button>
+</div>
+
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button (click)="addUser()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 
 
-    <ion-button (click)="save()" color="success">SAVE</ion-button>
-    <ion-button (click)="delete(user)" color="danger" *ngIf="user.id">DELETE</ion-button>
- <br>
- User List
- <table *ngIf="!isLoading">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Duration</th>
-      <th>MainActors</th>
-      <th>isPopular</th>
-      <th>Released</th>
-      <th></th>
-    </tr></thead>
-<tbody>
-  <tr *ngIf="let users of userList">
-    <td>{{user.Title}}</td>
-    <td>{{user.Duration}}</td>
-    <td>{{user.MainActors}}</td>
-    <td>{{user.isPopular}}</td>
-    <td>{{user.Released}}</td>
-    <td><ion-button color="warning" (click)="edit(user)">Edit</ion-button></td>
-  </tr></tbody>
- </table>
- </div>
-</ion-content>
